Included basic identity and fabric client operations

--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  // Refer to https://docs.npmjs.com/files/package.json for the format
   "name": "pegadroid-sample-nodeapp",
   "version": "1.0.0",
-  "description": "Sample hyperledger fabric node app",
-  "main": "pegadroid-sample-nodeapp",
-  "keywords":[],
+  "description": "Sample node app",
+  "main": "routes.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Saurabh Tiwari <saurabh.x.tiwari@gmail.com>",
-  "license": "UNLICENSED",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/saurabhxtiwari/pegadroid-sample-nodeapp"
+    "url": "git+https://github.com/saurabhxtiwari/pegadroid-sample-nodeapp.git"
+  },
+  "author": "saurabh.x.tiwari@gmail.com",
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/saurabhxtiwari/pegadroid-sample-nodeapp/issues"
+  },
+  "homepage": "https://github.com/saurabhxtiwari/pegadroid-sample-nodeapp#readme",
+  "dependencies": {
+    
   }
 }
